# advent-of-code-2022

./: .README.md.swp  .gitignore  README.md  pyproject.toml
solutions/: helper.py  soln.py
solutions/.ipynb_checkpoints/: soln-checkpoint.py
solutions/d1/: soln.py
solutions/d10/: notes10.md  soln.py
solutions/d12/: notes12.md  soln.py
solutions/d13/: soln.py
solutions/d14/: notes14.md  soln.py
solutions/d15/: day15.ipynb
solutions/d16/: day16.ipynb  soln.py
solutions/d17/: day17.py  notes-17.md  soln.py
solutions/d18/: day18.py  notes-18.md  notes18.md
solutions/d19/: day19.py  notes19.md  soln.py
solutions/d2/: notes2.md  soln.py
solutions/d20/: day20.py  notes20.md  soln.py
solutions/d21/: notes21.md  soln.py
solutions/d22/: notes22.md  soln.py
solutions/d3/: soln.py
solutions/d4/: soln.py
solutions/d5/: notes5.md  soln.py
solutions/d6/: notes6.md  soln.py
solutions/d7/: notes7.md
solutions/d8/: soln.py
solutions/day1/: .README.md.swp  .soln.py.swp  README.md  soln.py
solutions/day10/: README.md  soln.py
solutions/day11/: README.md  soln.py
solutions/day12/: README.md  soln.py
solutions/day13/: README.md  soln.py
solutions/day14/: README.md  soln.py
solutions/day15/: README.md  day15_2.ipynb  soln.py
solutions/day16/: README.md  archive_d16.py  day16.ipynb  foo.py  soln.py  soln2.py
solutions/day2/: README.md  soln.py
solutions/day3/: .README.md.swp  README.md  soln.py
solutions/day4/: README.md  soln.py
solutions/day5/: README.md  soln.py
solutions/day6/: README.md  soln.py  test.txt
(+9 files in other folders)
