[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Coding puzzles with emphasis on algorithms and data structures"
authors = ["vykuang <vykuang92@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
scipy = "^1.10.0"
jupyterlab = "^3.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
