[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Coding puzzles with emphasis on algorithms and data structures"
authors = ["vykuang <vykuang92@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "3.11.6"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
